[gd_scene load_steps=9 format=3 uid="uid://cirh827ewcmv"]

[ext_resource type="Script" path="res://scenes/characters/enemy/enemy.gd" id="1_ou3a5"]
[ext_resource type="PackedScene" uid="uid://dyen13fisyb5w" path="res://media/models/enemy_eye.gltf" id="2_870ts"]
[ext_resource type="PackedScene" uid="uid://ca7b5goalc73l" path="res://scenes/weapons/weapon_system.tscn" id="2_r5fnt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eykik"]
resource_local_to_scene = true
albedo_color = Color(0.707967, 0.707967, 0.707967, 1)
metallic = 0.75

[sub_resource type="CapsuleMesh" id="CapsuleMesh_o0umw"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_eykik")
radius = 0.9
height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_itg35"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(0.882353, 0.235294, 0, 0.784314)

[sub_resource type="SphereMesh" id="SphereMesh_7ixrq"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_itg35")
radius = 0.27
height = 0.54

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yasgu"]
resource_local_to_scene = true
radius = 0.978668
height = 3.0586

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 2
collision_mask = 39
safe_margin = 0.01
script = ExtResource("1_ou3a5")
weapon_system = ExtResource("2_r5fnt")

[node name="Pivot" type="Marker3D" parent="."]

[node name="model" parent="Pivot" instance=ExtResource("2_870ts")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0240855, 0)

[node name="body" type="MeshInstance3D" parent="Pivot/model"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.749392, -0.135904, 3.2757e-08)
mesh = SubResource("CapsuleMesh_o0umw")
skeleton = NodePath("")

[node name="eyeball" type="MeshInstance3D" parent="Pivot/model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0998565, 0.000353083, -4.36487e-09)
mesh = SubResource("SphereMesh_7ixrq")
skeleton = NodePath("")

[node name="weapon_slot_0" type="Marker3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.317256, 0, -1.38677e-08)

[node name="weapon_slot_1" type="Marker3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, -0.2, 1.3)

[node name="weapon_slot_2" type="Marker3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, -0.2, -1.3)

[node name="weapon_slot_3" type="Marker3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.715389, -0.214973, 3.12707e-08)
shape = SubResource("CapsuleShape3D_yasgu")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
radius = 1.5
neighbor_distance = 25.0
max_neighbors = 20
time_horizon_agents = 3.0
time_horizon_obstacles = 3.0
use_3d_avoidance = true

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
